--- a/1주차/pandas_chap01_0724.ipynb
+++ b/1주차/pandas_chap01_0724.ipynb
@@ -38,7 +38,7 @@
       },
       "source": [
         "import pandas as pd\n",
-        "data_frame = pd.read_csv('friend_list.csv')\n",
+        "data_frame = pd.read_csv('friend_list.csv')  # friend_list.csv 파일에서 데이터를 읽어온다.\n",
         "data_frame"
       ],
       "execution_count": 3,
