--- a/1주차/pandas_chap01_0724.ipynb
+++ b/1주차/pandas_chap01_0724.ipynb
@@ -140,7 +140,7 @@
         "outputId": "cd75adc8-cddf-4770-c1e5-a2045057bbe6"
       },
       "source": [
-        "data_frame.tail(2)"
+        "data_frame.tail(2)   # data_frame 중 뒤에서 2개의 데이터만 보여준다."
       ],
       "execution_count": 4,
       "outputs": [
@@ -213,7 +213,7 @@
         "outputId": "b7cf7258-457d-42ec-a7e4-56237d030101"
       },
       "source": [
-        "type(data_frame.job)"
+        "type(data_frame.job)   # data_frame.job의 데이터형 보여주기"
       ],
       "execution_count": 5,
       "outputs": [
@@ -243,8 +243,8 @@
         "outputId": "06d91ef2-8dce-4952-9f26-bf0351868dfb"
       },
       "source": [
-        "s1 = pd.core.series.Series([1,2,3])\n",
-        "s2 = pd.core.series.Series(['one','two','three'])\n",
+        "s1 = pd.core.series.Series([1,2,3])  # 시리즈 s1 선언\n",
+        "s2 = pd.core.series.Series(['one','two','three'])  # 시리즈 s2 선언\n",
         "pd.DataFrame(data = dict(num=s1, word=s2))"
       ],
       "execution_count": 6,
