--- a/1주차/pandas_chap01_0724.ipynb
+++ b/1주차/pandas_chap01_0724.ipynb
@@ -245,7 +245,7 @@
       "source": [
         "s1 = pd.core.series.Series([1,2,3])  # 시리즈 s1 선언\n",
         "s2 = pd.core.series.Series(['one','two','three'])  # 시리즈 s2 선언\n",
-        "pd.DataFrame(data = dict(num=s1, word=s2))"
+        "pd.DataFrame(data = dict(num=s1, word=s2)) # s1, s2로 데이터 프레임 "
       ],
       "execution_count": 6,
       "outputs": [
