Matplotlib 한글 폰트 사용하기

--- a/3주차/matplotlib_use_kor_font_0809.ipynb
+++ b/3주차/matplotlib_use_kor_font_0809.ipynb
@@ -99,7 +99,7 @@
         "\n",
         "# 그래프에서 마이너스 폰트 깨지는 문제에 대한 대처\n",
         "mpl.rcParams['axes.unicode_minus']=False\n",
-        "#plt.rc('font', family='NanumBarunGothic')"
+        "#plt.rc('font', family='NanumBarunGothic')를 추가하면 글씨가 깨지지 않는다."
       ],
       "execution_count": 1,
       "outputs": []
