Matplotlib 한글폰트 사용하기

--- a/3주차/matplotlib_use_kor_font_0809.ipynb
+++ b/3주차/matplotlib_use_kor_font_0809.ipynb
@@ -382,7 +382,8 @@
       "source": [
         "# OSX의 설치된 폰트를 가져오는 함수\n",
         "font_list_win=fm.OSXInstalledFonts()\n",
-        "print(len(font_list_win))"
+        "print(len(font_list_win))",
+        "# OSXInstalledFonts 함수는 3.1 버전부터 점차 사라지고 3.3버전에서는 완전히 삭제될 것이다. 현재 버전은 3.2.2이므로 사용되지 않는다."
       ],
       "execution_count": 7,
       "outputs": [
